GIA-140 Fix SonarQube issues